--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 .App {
   text-align: center;
 }
+
+
+html { 
+  background: url(pokemon_background.png) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
