--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,17 @@
 }
 
 
-html { 
+body { 
   background: url(pokemon_background.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+.subtitle{
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: large;
 }
